-
Bug
-
Resolution: Fixed
-
P3
-
jfx23, jfx24
-
b19
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8344988 | jfx23.0.2 | Alexander Zvegintsev | P3 | Resolved | Fixed | b03 |
This is to reduce overhead in case of frequent consecutive screen captures.
There is a crash when an AWT ScreenCast session overlaps with an FX ScreenCast session.
E.g. java.awt.Robot#getPixelColor() and javafx.scene.robot.Robot#getPixelColor() are called within 1 second.
This may require a fix on the JFX or OpenJDK side, or both.
- backported by
-
JDK-8344988 [XWayland] crash when an AWT ScreenCast session overlaps with an FX ScreenCast session
-
- Resolved
-
- blocks
-
JDK-8335470 [XWayland] JavaFX tests that use AWT Robot fail on Wayland
-
- Resolved
-
- relates to
-
JDK-8335468 [XWayland] JavaFX hangs when calling java.awt.Robot.getPixelColor
-
- Resolved
-
-
JDK-8326712 Robot tests fail on XWayland
-
- Resolved
-
-
JDK-8350009 [XWayland] SwingNodePlatformExitCrashTest hangs on Ubuntu 24.04
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jfx23u/35ab1678
-
Commit(master)
openjdk/jfx/001f292e
-
Review(master)
openjdk/jfx23u/33
-
Review(master)
openjdk/jfx/1639