8335469: [XWayland] crash when an AWT ScreenCast session overlaps with an FX ScreenCast session